# MRI_model

./: .env.example  .gitignore  README.md  evaluate.py  pyproject.toml  quickstart.txt  requirements.txt  train.py  train_v3.py
configs/: __init__.py  pretrain.yaml  pretrain_dinov3.yaml  pretrain_wholebody.yaml
data/: .gitkeep
outputs/: .gitkeep
scripts/: download_ixi.sh  prepare_datasets.py  pretrain.sh
src/data/: __init__.py  collate.py  mri_dataset.py  preprocessing.py  transforms.py
src/engine/: __init__.py  evaluator.py  trainer.py  trainer_v3.py
src/models/: __init__.py  dino.py  dino_head.py  losses.py  vision_transformer.py
src/models/layers/: __init__.py  attention.py  layernorm.py  patch_embed.py  rotary_pos_embed.py
src/utils/: __init__.py  checkpoint.py  config.py  masking.py  misc.py  modeling.py  param_groups.py  scheduler.py
tools/: prepare_all_datasets.py  survey_datasets.py  visualize_mri.py
