[project]
name = "dinov3-mri"
version = "0.1.0"
description = "DINOv3 self-supervised pretraining for 3D brain MRI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "timm>=1.0.0",
    "monai>=1.3.0",
    "nibabel>=5.0.0",
    "omegaconf>=2.3.0",
    "accelerate>=0.25.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "wandb",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*", "configs*"]
